--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: Tahoma, Verdana, Arial, sans-serif;
+    font-family: Verdana, Arial, sans-serif;
     font-size: 14px;
 }
 
@@ -13,15 +13,18 @@ html {
 
 body {
     background: #ffffff;
-    width: 960px;
-    margin: 20px auto;
+    width: 72%;
+    margin: 25px auto 40px auto;
     padding: 20px;
 }
 
-h1 {
+h1, h2 {
     font-family: 'Oswald', sans-serif;
-    font-size: 52px;
     color: #3583b0;
+}
+
+h1 {
+    font-size: 52px;
     padding-bottom: 10px;
     border-bottom: 2px solid #3583b0;
     text-align: center;
@@ -29,10 +32,10 @@ h1 {
 }
 
 h2 {
+    font-size: 20px;
     margin: 5px 0 10px;
     padding-bottom: 10px;
     border-bottom: 1px solid black;
-    color: #707070;
 }
 
 header {
@@ -62,16 +65,25 @@ p {
     padding: 10px 0 20px;
 }
 
-.param {
+.blokOverview {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+.blokOverview__image {
     position: relative;
+}
+
+.blokOverview__text {
+    margin: 0 5px;
 }
 
 .sale {
     position: absolute;
-    top: -25px;
-    left: 50px;
+    top: -10px;
+    left: -10px;
     z-index: 20;
     background: #ff000080;
     border-radius: 50%;
@@ -81,13 +93,13 @@ p {
     padding: 20px;
 }
 
-.small {
+.thumb {
     display: flex;
     justify-content: space-between;
     margin: 20px 0;
 }
 
-.overview {
+.blokInfo {
     margin-top: 60px;
 }
 
@@ -124,24 +136,39 @@ footer {
     color: #707070;
 }
 
-/*@media screen and (max-width: 780px) {*/
-/*    body {*/
-/*        width: 95%;*/
-/*    }*/
-/*}*/
+@media screen and (max-width: 960px) {
 
-@media screen and (max-width: 500px){
-
-    body {
-        width: 96%;
-        min-width: 320px;
+    h1 {
+        font-size: 6vw;
+        margin: 0 20px 40px;
     }
 
-    header, .param {
+    .blokOverview {
         flex-direction: column;
+        align-items: center;
+    }
+
+    .blokOverview__image {
+        margin-bottom: 40px;
+    }
+
+    .blokOverview__text {
+        margin-top: 20px;
+    }
+
+    .blokInfo {
+        margin-top: 40px;
+    }
+}
+
+@media screen and (max-width: 580px){
+
+    body {
+        margin: 5px auto 10px;
     }
 
     header {
+        flex-direction: column;
         align-items: center;
     }
 
@@ -157,12 +184,50 @@ footer {
         margin: 5px 5px 20px 5px;
     }
 
-    .sale {
-        top: -5px;
-        left: -5px;
+    .imageBox {
+        width: 100%;
     }
 
-    .foto {
+    .sale {
+        font-size: 4vw;
+    }
+
+    .blokInfo {
+        margin-top: 25px;
+    }
+}
+
+@media screen and (max-width: 440px) {
+
+    body {
         width: 100%;
+        padding: 0;
+    }
+
+    header {
+        padding: 0 0 5px;
+    }
+
+    main {
+        border: none;
+    }
+
+    p {
+        font-size: 12px;
+    }
+
+    .blokInfo {
+        margin-top: 10px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+
+    p {
+        font-size: 11px;
+    }
+
+    main {
+        border: none;
     }
 }
